--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -1,7 +1,7 @@
 FROM caddy:builder AS builder
 
 RUN xcaddy build \
-    --with github.com/caddy-dns/alidns
+    --with github.com/caddy-dns/${plugin}
 
 FROM caddy
 
