--- a/node-onebot/onebots/Dockerfile
+++ b/node-onebot/onebots/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine
 
 ADD ./docker-entrypoint.sh /
-RUN chmod +x /docker-entrypoint.sh && npm i icqq -g && npm cache clean -f
+RUN npm i onebots -g && npm cache clean -f
 
 ENV platform=3
 
