--- a/node-onebot/oicq/Dockerfile-ffmpeg
+++ b/node-onebot/oicq/Dockerfile-ffmpeg
@@ -1,7 +1,7 @@
 FROM node:alpine
 
 ADD ./docker-entrypoint.sh /
-RUN chmod +x /docker-entrypoint.sh && npm i oicq@1 -g && npm cache clean -f
+RUN npm i oicq@1 -g && apk add --no-cache --update ffmpeg && npm cache clean -f
 
 CMD ["/docker-entrypoint.sh"]
 ENTRYPOINT ["/bin/sh"]
