--- a/node-onebot/onebots/Dockerfile-ffmpeg
+++ b/node-onebot/onebots/Dockerfile-ffmpeg
@@ -1,7 +1,7 @@
 FROM node:alpine
 
 ADD ./docker-entrypoint.sh /
-RUN npm i onebots -g && apk add --no-cache ffmpeg ffprobe && npm cache clean -f
+RUN npm i onebots -g && apk add --no-cache --update ffmpeg && npm cache clean -f
 
 VOLUME ["/data"]
 
