--- a/.github/workflows/node-onebot.yml
+++ b/.github/workflows/node-onebot.yml
@@ -2,7 +2,7 @@ name: onde-onebot
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '20 16 */7 * *'
+    - cron: '0 16 * * 6'
 jobs:
   build:
     strategy:
