--- a/.github/workflows/go-cqhttp.yml
+++ b/.github/workflows/go-cqhttp.yml
@@ -20,7 +20,7 @@ jobs:
           rm -rf {*,.[^.]*,..?*}
           git clone --depth=1 https://github.com/Mrs4s/go-cqhttp.git .
           git fetch --tags --depth=10
-          git checkout $(git tag -l | tac | grep -E '.*fix.*|v[0-9\.]+-[rc0-9]' | head -n 1)
+          git checkout $(git tag -l | tac | grep -E '.*fix.*|v[0-9\.]+(-[rc0-9])?' | head -n 1)
           wget https://raw.githubusercontent.com/mzzsfy/Dockerfile/main/go-cqhttp/docker-entrypoint.sh -O docker-entrypoint.sh
           chmod +x docker-entrypoint.sh
           echo 'COPY docker-entrypoint.sh /' >> Dockerfile
