--- a/.github/workflows/go-cqhttp.yml
+++ b/.github/workflows/go-cqhttp.yml
@@ -43,7 +43,7 @@ jobs:
         id: docker_before
         run: |
           image="${{ secrets.DOCKER_HUB_USERNAME }}/go-cqhttp"
-          tags="$image:latest,$image:$(date +'%m-%d_%H-%M-%S')"
+          tags="$image:$(date +'%m-%d_%H-%M-%S'),$image:latest"
           echo "target images $tags"
           echo "tags=$tags" >> $GITHUB_OUTPUT
           # 一个特殊镜像,修复某些buildx 的 bug
