--- a/chromium/ffmpeg/Dockerfile
+++ b/chromium/ffmpeg/Dockerfile
@@ -1,3 +1,3 @@
-FROM mzzsfy/chrome:base
+FROM debian:bullseye
 
-RUN apt-get update && apt-get install --no-install-recommends -y ffmpeg && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install --no-install-recommends -y chromium chromium-driver ffmpeg && rm -rf /var/lib/apt/lists/*
