--- a/chromium/ffmpeg/Dockerfile
+++ b/chromium/ffmpeg/Dockerfile
@@ -1,3 +1,5 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install --no-install-recommends -y chromium chromium-driver ffmpeg && rm -rf /var/lib/apt/lists/*
+ENV LANG=C.UTF-8
+
+RUN apt-get update && apt-get install --no-install-recommends -y chromium chromium-driver ffmpeg xvfb && rm -rf /var/lib/apt/lists/*
