--- a/chromium/ffmpeg/Dockerfile
+++ b/chromium/ffmpeg/Dockerfile
@@ -2,4 +2,4 @@ FROM debian:bullseye
 
 ENV LANG=C.UTF-8
 
-RUN apt-get update && apt-get install --no-install-recommends -y chromium chromium-driver ffmpeg xvfb && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install --no-install-recommends -y chromium chromium-driver ffmpeg xauth xvfb && rm -rf /var/lib/apt/lists/*
