--- a/jdk/ffmpeg/Dockerfile
+++ b/jdk/ffmpeg/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8
 
 ENV LANG=C.UTF-8
 
-RUN apt-get update && apt-get install --no-install-recommends -y ffmpeg lame && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install --no-install-recommends -y ffmpeg lame net-tools && rm -rf /var/lib/apt/lists/*
