更新caddy dns插件列表

--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     strategy:
       matrix:
-        plugin: [cloudflare,alidns,azure,dnspod,googleclouddns,duckdns]
+        plugin: [azure,cloudflare,alidns,tencentcloud,googleclouddns,huaweicloud,duckdns,acmedns]
     runs-on: ubuntu-latest
     steps:
       - name: Check Out
